# Duramba

./: README.md
dumper/RobloxExternal-macOS/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
dumper/RobloxExternal-macOS/App-Common/: HeadlessConsole.h  esp_controller.hpp  esp_instances.hpp  esp_ipc.hpp  esp_types.hpp
dumper/RobloxExternal-macOS/App-ESPManager/: CMakeLists.txt
dumper/RobloxExternal-macOS/App-ESPManager/src/: esp_manager.cpp  objc_shims.h  objc_shims.mm
dumper/RobloxExternal-macOS/App-Injector/: CMakeLists.txt  debug.entitlements
dumper/RobloxExternal-macOS/App-Injector/res/: Walnut-Icon.icns
dumper/RobloxExternal-macOS/App-Injector/src/: InjectorApp.cpp  InjectorLayer.cpp  InjectorLayer.h  games.hpp  main.cpp  roblox.hpp
dumper/RobloxExternal-macOS/App-Injector/src/dumper/: dumper.hpp
dumper/RobloxExternal-macOS/App-Injector/src/games/: game_profile.hpp  generic.hpp  murder_mystery_2.hpp  murderers_vs_sheriffs.hpp  murderers_vs_sheriffs_duels.hpp  phantom_forces.hpp  rivals.hpp
dumper/RobloxExternal-macOS/App-Injector/src/macho/: macho.hpp
dumper/RobloxExternal-macOS/App-Injector/src/memory/: memory.hpp
dumper/RobloxExternal-macOS/App-Injector/src/process/: process.hpp
dumper/RobloxExternal-macOS/App-Injector/src/roblox/: classes.hpp  game.hpp  instance.hpp  math.hpp  offsets.hpp  string.hpp
dumper/RobloxExternal-macOS/App-Injector/src/scanner/: scanner.hpp
dumper/RobloxExternal-macOS/Walnut/: .gitignore  .gitmodules  CMakeLists.txt
dumper/RobloxExternal-macOS/Walnut/Walnut/: Build-Walnut-Headless.lua  Build-Walnut.lua
dumper/RobloxExternal-macOS/Walnut/Walnut-Modules/Walnut-Networking/: Build-Walnut-Networking.lua
dumper/RobloxExternal-macOS/Walnut/Walnut-Modules/Walnut-Networking/Platform/MacOS/Walnut/Networking/: MacOSNetworkingUtils.cpp
dumper/RobloxExternal-macOS/Walnut/Walnut/Platform/GUI/Walnut/: ApplicationGUI.cpp  ApplicationGUI.h
dumper/RobloxExternal-macOS/Walnut/Walnut/Platform/GUI/Walnut/ImGui/: ImGuiTheme.h
dumper/RobloxExternal-macOS/Walnut/Walnut/Platform/GUI/Walnut/UI/: Console.cpp  Console.h  UI.cpp
dumper/RobloxExternal-macOS/Walnut/Walnut/Platform/Headless/Walnut/: ApplicationHeadless.cpp  ApplicationHeadless.h
dumper/RobloxExternal-macOS/Walnut/Walnut/Source/Walnut/: Layer.h
dumper/RobloxExternal-macOS/Walnut/Walnut/Source/Walnut/Core/: Log.cpp  Log.h
dumper/RobloxExternal-macOS/Walnut/WalnutApp/: Build-Walnut-App.lua
